--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
@@ -248,3 +248,19 @@
     margin: 40px auto 40px;
   }
 }
+
+@media (max-width: 767.987px) {
+  .section-title{
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .card{
+    width: 100%;
+    max-width: 420px;
+    margin: 0 15px 20px;
+    .card-preview__bg{
+      height: 240px;
+    }
+  }
+
+}
