--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -169,3 +169,69 @@ input {
     margin: 0 auto;
   }
 }
+
+@media (max-width: 1360px) {
+  .registration-bl .row{
+    justify-content: center;
+  }
+  h2{
+    font-size: 24px;
+    line-height: 22px;
+    margin: 0 0 12px;
+  }
+  p{
+    font-size: 16px;
+    line-height: 22px;
+    margin: 0 0 0px;
+  }
+  form{
+    margin-top: 10px;
+  }
+  input {
+    height: 38px;
+    font-size: 14px;
+    &::-webkit-input-placeholder {
+        font-size: 14px;
+    }
+
+    &::-moz-placeholder {
+        /* Firefox 19+ */
+        font-size: 14px;
+    }
+
+    &:-ms-input-placeholder {
+        /* IE 10+ */
+        font-size: 14px;
+    }
+
+    &:-moz-placeholder {
+        /* Firefox 18- */
+        font-size: 14px;
+    }
+  }
+  .controls{
+    margin: 0 0 25px;
+  }
+  .submit .btn{
+    font-size: 14px;
+  }
+}
+@media (max-width: 1024px) {
+  h2{
+    font-size: 28px;
+    line-height: 1em;
+    margin: 0 0 18px;
+  }
+  p{
+    font-size: 18px;
+    line-height: 25px;
+    margin: 0 0 30px;
+  }
+}
+@media (max-width: 767.98px) {
+  form{
+    max-width: 420px;
+    width: 100%;
+    padding: 0 15px;
+  }
+}
