--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -82,7 +82,12 @@
         <div class="about-offer__text" [innerHTML]="offerData.description"></div>
       </div>
 
-
+      <div class="choose-packet">
+        <div class="running-block">
+          <app-service-page-packages [offerData]="offerData" [offerId]="offerId" *ngIf="offerData" (checkoutState)="openCheckout($event)" (scrollToThis)="scrollTo($event)">
+          </app-service-page-packages>
+        </div>
+      </div>
 
       <app-service-page-compare-table [offerData]="offerData" *ngIf="offerData" id="compare-table" (checkoutState)="openCheckout($event)" (scrollToThis)="scrollTo($event)">
       </app-service-page-compare-table>
