--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -140,6 +140,7 @@ nav {
 @media (max-width: 767.98px) {
   .wrapper {
     max-width: none;
+    padding: 0 15px;
     .container {
       padding: 0 0;
     }
@@ -214,6 +215,8 @@ nav {
       .blur-block{
         z-index: 19;
         opacity: 1;
+        width: 100%;
+        height: 100%;
       }
       .mobile-menu{
         left: -15px;
@@ -227,8 +230,8 @@ nav {
       z-index: -1;
       top: 0;
       left: 0;
-      height: 100%;
-      width: 100%;
+      height: 0;
+      width: 0;
       background: rgba(224,225,249,.4);
       backdrop-filter: blur(8px);
       transition: all .4s ease-in-out;
@@ -316,13 +319,13 @@ nav {
           height: 0;
           overflow: hidden;
           transition: all .5s ease-out;
-          opacity: 0;      
+          opacity: 0;
           li{
             padding: 7px 30px;
           }
           &.open{
             height: 140px;
-            opacity: 1;   
+            opacity: 1;
           }
         }
       }
