--- a/src/app/authorization-page/authentification-page/authentification-page.component.html
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.html
@@ -2,35 +2,55 @@
     <div class="nav-menu">
         <app-main-header [pageName]="'authoriz'"></app-main-header>
     </div>
-    <div>
-         <div class='login-form auth-form'>
-        <div class="form log">
 
-            <app-login-page></app-login-page>
+    <div class="slides-wrapper">
+      <!-- <div class="swipe-btn-wrap" [ngClass]="{
+        'auth': auth,
+        'register': !auth,
+        'to-right' : animationType === 'forvard',
+        'to-left' : animationType === 'back',
+        'animation': animation
+      }" >
+        <button class='btn-switch' type="button" (click)="swipeBtn()" >
+          <img src="/assets/images/icons/signup.svg" alt="">
+        </button>
+        <div class="text-butns registrate">Регистрация</div>
+        <div class="text-butns login">логин</div>
+      </div> -->
+
+
+      <div class='login-form auth-form'>
+        <div class="form log">
+          <app-login-page></app-login-page>
         </div>
-    </div>
-    <div class='registr-form auth-form'>
+      </div>
+      <div class='registr-form auth-form'>
         <div class="form reg">
-            <app-registration-page></app-registration-page>
+          <app-registration-page></app-registration-page>
         </div>
+      </div>
+
+      <div class="text-butns registrate" (click)="swipeBtn()">Регистрация</div>
+      <div class="text-butns login" (click)="swipeBtn()">логин</div>
     </div>
-    </div>
+
+
 
     <div class="swipe-block" [ngClass]="auth? 'left' : 'right'">
-        <div class="inform">
-            <h2>
-                <span class='registr-txt'>{{'auth-page.first-time' | translate}}</span>
-                <span class='login-txt'>{{'auth-page.was-here' | translate}}</span>
-            </h2>
-            <p>
-                <span class='registr-txt'>{{'auth-page.wellcome-to-us' | translate}}</span>
-                <span class='login-txt'>{{'auth-page.wellcome-again' | translate}}</span>
-            </p>
-            <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'">
-        <span class='login-btn-txt'>{{'general.enter' | translate}}</span>
-        <span class='registr-btn-txt'>{{'auth-page.registrate' | translate}}</span>
-      </button>
-        </div>
+      <div class="inform">
+        <h2>
+            <span class='registr-txt'>{{'auth-page.first-time' | translate}}</span>
+            <span class='login-txt'>{{'auth-page.was-here' | translate}}</span>
+        </h2>
+        <p>
+            <span class='registr-txt'>{{'auth-page.wellcome-to-us' | translate}}</span>
+            <span class='login-txt'>{{'auth-page.wellcome-again' | translate}}</span>
+        </p>
+        <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'">
+          <span class='login-btn-txt'>{{'general.enter' | translate}}</span>
+          <span class='registr-btn-txt'>{{'auth-page.registrate' | translate}}</span>
+        </button>
+      </div>
     </div>
 </div>
 <app-inform-popup *ngIf="message" [(message)]="message"></app-inform-popup>
