--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -26,6 +26,10 @@
       display: none;
       // background: #fff;
     }
+
+    .text-butns.login{
+        display: none!important;
+    }
   }
 
   .log {
@@ -46,6 +50,11 @@
       display: none;
       background: #fff;
     }
+
+    .text-butns.registrate{
+        display: none!important;
+      }
+
   }
 
   .reg {
@@ -266,6 +275,48 @@
     }
 
   }
+
+  .slides-wrapper{
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .btn-switch{
+      display: block;
+      border: none;
+      background-color: transparent;
+      position: absolute;
+      left: 0;
+      top: 0;
+      border-bottom: 20px;
+      outline: none;
+      img{
+        object-fit: cover;
+        width: 40px;
+        height: 40px;
+      }
+
+    }
+    .text-butns {
+      display: none;
+      width: max-content;
+      overflow: hidden;
+
+      line-height: 1em;
+      left: 50px;
+      top: 0;
+
+      border: 1px solid #323C47;
+      padding: 13px 73px;
+      border-radius: 8px;
+      margin-top: 30px;
+    }
+
+  }
+
+
 }
 
 .docs {
@@ -666,6 +717,30 @@
 }
 
 @media (max-width: 767px) {
+  p.text{
+    margin: 0;
+  }
+
+  .auth-pg{
+    .slides-wrapper{
+      width: 100%;
+      display: flex;
+      .text-butns{
+        display: block;
+      }
+    }
+    .reg{
+      width: 320px;
+    }
+  }
+
+
+  .swipe-btn-wrap {
+    height: 42px;
+    width: 100%;
+    position: relative;
+
+  }
   .auth-pg{
     &.login .login-form{
       width: 100%;
@@ -673,6 +748,7 @@
     .swipe-block.right{
       display: none;
     }
+
   }
   .auth-pg{
     &.registr .registr-form{
@@ -681,5 +757,98 @@
     .swipe-block.left{
       display: none;
     }
+
   }
+  :host::ng-deep {
+    form {
+      .controls{
+        label{
+          font-size: 12px;
+        }
+      }
+      label{
+        white-space: normal;
+      }
+    }
+    .mat-form-field-infix{
+      border-top: 0;
+    }
+
+  }
+
+  .to-right.animation {
+    .btn-switch{
+      -webkit-animation:forvard 3s linear;
+      animation-delay: 1s;
+    }
+    // .text-butns.login {
+    //   animation: textAnimation 1s;
+    // }
+    // .text-butns.registrate {
+    //   animation: textAnimation 1s;
+    // }
+  }
+
+  .auth-pg.registr .text-butns.registrate{
+    color: transparent;
+  }
+  .auth-pg.login .text-butns.login{
+    color: transparent;
+  }
+
+  .to-left.animation .btn-switch{
+    -webkit-animation:back 3s linear reverse;
+
+  }
+
+  @-webkit-keyframes forvard {
+    0% {
+        -webkit-transform: rotate(0deg);
+        left: 0;
+    }
+    25% { /* note that rotation from 0 to 20 deg happens in 25% time = 0.45 seconds. */
+        -webkit-transform: rotate(180deg);
+    }
+    50% {
+      -webkit-transform: rotate(360deg);
+    }
+    75% {
+        -webkit-transform: rotate(540deg);
+    }
+    100% {
+      -webkit-transform: rotate(720deg);
+      left: calc(100% - 40px);
+      opacity: 0;
+    }
+}
+@-webkit-keyframes back {
+  0% {
+      -webkit-transform: rotate(0deg);
+      left: 0;
+  }
+  25% { /* note that rotation from 0 to 20 deg happens in 25% time = 0.45 seconds. */
+      -webkit-transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(360deg);
+  }
+  75% {
+      -webkit-transform: rotate(540deg);
+  }
+  100% {
+    -webkit-transform: rotate(720deg);
+    left: calc(100% - 40px);
+    opacity: 0;
+  }
+}
+
+@keyframes textAnimation {
+  from {
+    width: 100px;
+  }
+  to {
+    width: 0;
+  }
+}
+
 }
