--- a/src/app/shared/modules/categories-header/categories-header.component.html
+++ b/src/app/shared/modules/categories-header/categories-header.component.html
@@ -3,9 +3,9 @@
   <div class="wrapper">
     <ul class="category-wrapper" *ngFor="let category of categoriesList.category" >
       <h3 class="category-name" >
-        <a class="category" [routerLink]="['/catalog', category.link] | localize" >{{category.name}}</a>
+        <a class="category" [routerLink]="['/catalog', category.link] | localize" >{{category['name_' + currentLang]}}</a>
       </h3>
-      
+
       <div class="subcategories-list">
         <ul class="subcategory-group" *ngFor="let group of category.groups;">
 
@@ -13,7 +13,7 @@
           <div *ngFor="let sub_category of category.sub_categories">
             <a class="subcategory" [routerLink]="['/catalog', category.link, sub_category.link] | localize"
               *ngIf="group === sub_category.group">
-              {{sub_category.name}}
+              {{sub_category['name_' + currentLang]}}
             </a>
           </div>
 
