--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
@@ -3,8 +3,8 @@
         <h3>{{'dashboard.create-service.second-step.title' | translate}}</h3>
 
         <h5>{{'dashboard.create-service.second-step.subtitle' | translate}}</h5>
-        <div class="form-group" [ngClass]="{'error': (
-             (characterLength !== 0 && characterLength <= 100 && characterLength !== null) ||
+        <div class="form-group" [ngClass]="{'error': 
+             (characterLength == 0 || characterLength <= 100  ||
              characterLength >500) && submitted}">
             <quill-editor [modules]="config" [(ngModel)]="userService.description" name="editor" placeholder="" (onContentChanged)="onEditorCreated($event)" ngbPopover="{{'dashboard.create-service.second-step.tool-tip.subtitle' | translate}}" popoverTitle="{{'dashboard.create-service.second-step.tool-tip.title' | translate}}"
                 placement="right" popoverClass="popover" closeDelay="200">
