--- a/src/app/catalog-page/categories-catalog-page/categories-catalog-page.component.scss
+++ b/src/app/catalog-page/categories-catalog-page/categories-catalog-page.component.scss
@@ -110,16 +110,17 @@
     &-img{
       width: 350px;
       height: 240px;
-      // background: url(2143176.jpg);
-      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+      // box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
       border-radius: 3px;
       background-color: #fff;
       cursor: pointer;
       outline: none;
+      display: flex;
+      align-items: center;
       img{
-        object-fit: cover;
+        object-fit: contain;
         width: 100%;
-        height: 100%;
+        height: 90%;
       }
     }
     a{
@@ -135,6 +136,8 @@
       padding-top: 14px;
       color: #323C47;
       max-width: 300px;
+      margin: 0 auto;
+      text-align: center;
       &:hover{
         color: #3C7EEA;
       }
@@ -174,5 +177,46 @@
         max-width: 255px;
       }
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  .sidebar{
+    display: none;
+  }
+  .subcategories-list{
+    width: 100%;
+    .subcategory-full {
+      width: calc(33% - 30px);
+    }
+    .subcategory-full-img{
+      width: 100%;
+      height: 160px;
+    }
+  }
+  .bread-crumbs{
+    margin-top: 15px;
+    margin-bottom: 25px;
+    padding: 0 15px;
+  }
+  .catalo-page__wrapper{
+    margin-top: 40px;
+  }
+
+}
+
+@media (max-width: 767.987px) {
+
+  .subcategories-list .subcategory-full{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .catalo-page__wrapper{
+    margin-top: 30px;
+  }
+  .category-title{
+    font-size: 18px;
+    line-height: 23px;
+    color: #323C47;
   }
 }
