--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -141,6 +141,7 @@ nav {
   .wrapper {
     max-width: none;
     padding: 0 15px;
+    background-color: #fff;
     .container {
       padding: 0 0;
     }
