--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -8,7 +8,12 @@
 .filters-list {
   display: flex;
 }
-
+.mob-filter{
+  display: none;
+}
+.show-filters{
+  display: none;
+}
 .filter {
   background: #FFFFFF;
   border: 1px solid rgba(220, 224, 230, 0.1);
@@ -394,7 +399,7 @@
           padding: 6px 5px;
         }
       }
-    }  
+    }
   }
   .filter-switch {
     position: absolute;
@@ -417,6 +422,141 @@
         padding: 12px 19px 12px;
         font-size: 14px;
         line-height: 21px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  // .filters-list{
+  //   display: none;
+  // }
+}
+
+@media (max-width: 767.98px) {
+  .show-filters{
+    display: flex;
+    -webkit-box-pack: center;
+    align-items: center;
+    width: max-content;
+    margin-bottom: 30px;
+    .show-filters_img-wrapper{
+      width: 34px;
+      height: 34px;
+      background: #E9ECF2;
+      border-radius: 3px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 10px;
+      img{
+        width: 20px;
+        height: 19px;
+      }
+    }
+    span{
+      font-size: 14px;
+      line-height: 21px;
+      color: #323C47;
+      text-transform: uppercase;
+    }
+
+  }
+  .filter{
+    display: none;
+  }
+  .filter-chips{
+    display: none;
+  }
+  .mob-filter{
+    display: block;
+    margin-bottom: 30px;
+    max-width: 290px;
+    margin: 0 auto 30px;
+    &-title{
+      font-size: 16px;
+      line-height: 21px;
+      color: #323C47;
+      font-weight: 600;
+    }
+    &-values-wrapper{
+      display: flex;
+      flex-direction: column;
+      &.prices{
+        flex-direction: row;
+      }
+      .mob-filter-section{
+        margin-right: 15px;
+        input{
+          width: 100px;
+        }
+        label{
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+  .filters-list{
+    display: flex;
+    flex-direction: column;
+    .mob-filter-values{
+      width: 100%;
+      border: 1px solid #F4F7FC;
+      padding: 10px 10px 0;
+    }
+  }
+  .filter-values-wrapper{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile-filters-block_wrapper{
+    // max-width: 290px;
+    // margin: 0 auto;
+  }
+
+  .mobile-filters-block{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #fff;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    display: none;
+    max-height: 100vh;
+    overflow: scroll;
+    &.open{
+      display: block;
+    }
+  }
+
+  .mobile-filters-top{
+    padding: 22px 15px 18px;
+    background: #FAFBFC;
+    font-size: 14px;
+    line-height: 21px;
+    color: #323C47;
+    margin-bottom: 20px;
+
+    .go-back{
+      position: relative;
+      max-width: 290px;
+      margin: 0 auto;
+      padding-left: 10px;
+      &:after{
+        position: absolute;
+        content: "";
+        width: 9px;
+        height: 9px;
+        border-bottom: 2px solid #4285F4;
+        border-right: 2px solid #4285F4;
+        left: 0;
+        top: 53%;
+        transform: translate(-50%, -50%) rotate(135deg);
       }
     }
   }
