--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -187,9 +187,7 @@
     }
   }
 }
-.card:nth-child(4n) {
-  margin-right: 0;
-}
+
 
 @media (max-width: 1499px) {
   .total-result{
@@ -249,6 +247,29 @@
         font-size: 14px;
         line-height: 16px;
       }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .total-result{
+    margin-bottom: 15px;
+  }
+  .card{
+    width: calc(33% - 20px);
+    margin: 0 10px 30px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .total-result{
+    margin-bottom: 15px;
+  }
+  .card{
+    width: 100%;
+    margin: 0 10px 30px;
+    .card-preview__bg{
+      height: 180px;
     }
   }
 }
