--- a/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.scss
+++ b/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.scss
@@ -95,3 +95,31 @@
     }
   }
 }
+
+@media (max-width: 1024px) {
+  .pagination-wrapper{
+    margin: 20px auto 60px;
+  }
+}
+
+
+@media (max-width: 767.98px) {
+  .pagination-wrapper{
+    display: none;
+  }
+  .load-more{
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1px;
+    color: #3C7EEA;
+    background-color: transparent;
+    border: 1px solid #3C7EEA;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 11px 10px;
+    margin: 0 auto;
+  }
+}
