--- a/src/app/catalog-page/catalog/catalog.component.scss
+++ b/src/app/catalog-page/catalog/catalog.component.scss
@@ -114,7 +114,7 @@
   }
 }
 
-@media (max-width: 1499px) {  
+@media (max-width: 1499px) {
   .wrapper{
     max-width: 1110px;
   }
@@ -129,14 +129,24 @@
   }
 }
 
-@media (max-width: 1360px) {   
+@media (max-width: 1360px) {
   .wrapper{
     max-width: 1010px;
   }
 }
 
-// @media (max-width: 1024px) {   tablet 
+@media (max-width: 1024px) {
+  .wrapper{
+    max-width: 690px;
+  }
+}
 
-// @media (max-width: 767px) {   mobile
+@media (max-width: 767.98px) {
+  .wrapper{
+    max-width: 390px;
+    width: 100%;
+    padding: 0 15px;
+  }
+}
 
-// @media (max-width: 360px) {   Small mobile 
+// @media (max-width: 360px) {   Small mobile
