--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -327,6 +327,11 @@ form::ng-deep {
     margin-right: 3%;
     margin-bottom: 20px;
     position: relative;
+    &.main-photo {
+      &:before {
+        border: 4px solid #3c7eea;
+      }
+    }
     div.delete-file {
       position: absolute;
       height: 24px;
