--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
@@ -16,7 +16,8 @@
                 <span>{{'dashboard.create-service.third-step.extra-form.made-by' | translate}}</span>
                 <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
                     <div class=" select-wrap-extra">
-                        <mat-select #name="ngModel" [(ngModel)]="userService.compressedDeadlines.basicCompressedDays" [required]="userService.compressedDeadlines.publishCompressedDeadlines" name="basicCompressedDays">
+                        <mat-select #name="ngModel" [(ngModel)]="userService.compressedDeadlines.basicCompressedDays" 
+                        [required]="userService.compressedDeadlines.publishCompressedDeadlines" name="basicCompressedDays">
                             <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                                 {{ days }}&nbsp;{{'dashboard.create-service.third-step.extra-form.days' | translate}}
                             </mat-option>
