--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
@@ -2,7 +2,7 @@
 
 <app-main-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-main-user-settings>
 <app-location-language-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-location-language-user-settings>
-<app-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel" [closeAfterSaveSettings] = "succesRessult"></app-education-user-settings>
+<app-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel" [formSubmitted]="submitted" [closeAfterSaveSettings] = "succesRessult"></app-education-user-settings>
 <app-additional-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel" [closeAfterSaveSettings] = "succesRessult"></app-additional-education-user-settings>
 <button type="submit" class="btn save-all" (click)="updateSettings()" *ngIf="userSettingsModel">сохранить изменения</button>
 
