--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
@@ -17,22 +17,41 @@
     </ul>
 
     <div class="additional-options" *ngIf="offerData">
-      <h3 class="additional-options__title">{{'service-page.checkout-title' | translate}}</h3>
-      <h4 class="additional-options__name">{{offerData.title}}</h4>
+      <!-- if any options -->
+      <ng-container *ngIf="offerData.extra_terms.length > 0 || 
+                          offerData.extra_changes && offerData.extra_changes.published || 
+                          offerData.extra_commercial && offerData.extra_commercial.published || 
+                          offerData.extra_features.length > 0">
+        <h3 class="additional-options__title">{{'service-page.checkout-title' | translate}}</h3>
+        <h4 class="additional-options__name">{{offerData.title}}</h4>
+      </ng-container>
+      <!-- if no options -->
+      <!-- <ng-container>
+        <h3 class="additional-options__title">{{'service-page.checkout-title' | translate}}</h3>
+        <h4 class="additional-options__name">{{offerData.title}}</h4>
+      </ng-container> -->
 
-      <form class="extra-features__form" [formGroup]="checkoutForm">
+      <form class="extra-features__form" [formGroup]="checkoutForm" 
+      *ngIf="offerData.extra_terms.length > 0 || 
+                          offerData.extra_changes && offerData.extra_changes.published || 
+                          offerData.extra_commercial && offerData.extra_commercial.published || 
+                          offerData.extra_features.length > 0"
+                          >
         <ul class="extra-features__list">
-          <ng-container *ngFor="let extra_term of offerData.extra_terms">
-            <div class="extra-features__item" *ngIf="extra_term.package == currentPackage && extra_term.published">
-              <mat-checkbox class="extra-features__checkbox" formControlName="extraTerms" name="extraTerms">
-                <div class="extra-features__text">
-                  <span class="extra-features__title">{{'service-page.short-time' | translate}}  - {{extra_term.count_days}} {{'general.days' | translate}}</span>
-                </div>
-              </mat-checkbox>
-              <div class="extra-features__price">{{extra_term.price}} UAH</div>
-            </div>
+          <ng-container *ngIf="offerData.extra_terms.length > 0">
+            <ng-container *ngFor="let extra_term of offerData.extra_terms">
+              <div class="extra-features__item" *ngIf="extra_term.package == currentPackage && extra_term.published">
+                <mat-checkbox class="extra-features__checkbox" formControlName="extraTerms" name="extraTerms">
+                  <div class="extra-features__text">
+                    <span class="extra-features__title">{{'service-page.short-time' | translate}}  - {{extra_term.count_days}} {{'general.days' | translate}}</span>
+                  </div>
+                </mat-checkbox>
+                <div class="extra-features__price">{{extra_term.price}} UAH</div>
+              </div>
+            </ng-container>
           </ng-container>
-          <div class="extra-features__item" *ngIf="offerData.extra_changes.published">
+
+          <div class="extra-features__item" *ngIf="offerData.extra_changes && offerData.extra_changes.published">
             <mat-checkbox class="example-margin" formControlName="extraChanges" name='extraChanges'>
               <div class="extra-features__text">
                 <span class="extra-features__title">{{'service-page.additional-edits' | translate}}</span>
@@ -40,7 +59,7 @@
             </mat-checkbox>
             <div class="extra-features__price">{{offerData.extra_changes.price}} UAH</div>
           </div>
-          <div class="extra-features__item" *ngIf="offerData.extra_commercial.published">
+          <div class="extra-features__item" *ngIf="offerData.extra_commercial && offerData.extra_commercial.published">
             <mat-checkbox class="extra-features__checkbox" formControlName="extraCommercial" name='extraCommercial'>
               <div class="extra-features__text">
                 <span class="extra-features__title">{{'service-page.commercial-use' | translate}}</span>
@@ -50,7 +69,7 @@
           </div>
 
           <ng-container *ngFor="let extra_feature of offerData.extra_features; let i = index">
-            <div class="extra-features__item extra-features__item-column"  *ngIf="extra_feature.published">
+            <div class="extra-features__item extra-features__item-column"  *ngIf="extra_feature && extra_feature.published">
               <div class="extra-features__item-wrapper">
                 <mat-checkbox class="extra-features__checkbox" [formControlName]="extra_feature.title" name='extra_feature.title'>
                   <span class="extra-features__title">{{extra_feature.title}}</span>
