--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -242,7 +242,7 @@
 
   </form>
 
-  <div class="filter-chips" *ngIf="catalogFilters">
+  <!-- <div class="filter-chips" *ngIf="catalogFilters">
     <div class="filter-chips-list">
       <ng-container *ngFor='let filter of catalogFilters | keyvalue'>
         <div class="filter-chips-val" *ngIf="
@@ -274,6 +274,6 @@
       </ng-container>
     </div>
 
-  </div>
+  </div> -->
 
 </div>
