--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -7,6 +7,7 @@
 
 .filters-list {
   display: flex;
+  margin-bottom: 30px;
 }
 .mobile-filters-block_wrapper{
   display: none;
@@ -15,6 +16,9 @@
   display: none;
 }
 .show-filters{
+  display: none;
+}
+.load-more{
   display: none;
 }
 .filter {
