--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <form class="filters-list">
 
-    <div class="filter f-required">
+    <!-- <div class="filter f-required">
       <div class="filter-title" (click)="showFullFilter(0)">
         <p>Исходники работы</p>
         <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 0}"></div>
@@ -18,7 +18,7 @@
           <div class="f-btn" (click)="showFullFilter(null)">Закрыть</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="filter f-required">
       <div class="filter-title" (click)="showFullFilter(1)">
