--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.scss
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.scss
@@ -200,6 +200,17 @@ input {
   }
 }
 @media (max-width: 767.98px) {
+    h2{
+    font-size: 24px;
+    line-height: 1em;
+    margin: 0 0 15px;
+  }
+  p{
+    font-size: 14px;
+    line-height: 22px;
+    margin: 0 auto 10px;
+    max-width: 240px;
+  }
   form{
     max-width: 420px;
     width: 100%;
