--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -229,9 +229,31 @@ input {
   }
 }
 @media (max-width: 767.98px) {
+  h2{
+    font-size: 24px;
+    line-height: 1em;
+    margin: 0 0 15px;
+  }
+  p{
+    font-size: 14px;
+    line-height: 22px;
+    margin: 0 0 10px;
+    max-width: 240px;
+  }
   form{
     max-width: 420px;
     width: 100%;
     padding: 0 15px;
+    .mat-checkbox-layout{
+      font-size: 12px;
+    }
+  }
+  .submit{
+    margin: 10px auto 0;
+    button{
+      display: block;
+      min-width: 200px;
+      padding: 13px 0;
+    }
   }
 }
