--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -408,7 +408,7 @@
   }
   .filter-switch {
     position: absolute;
-    top: -100%;
+    top: 0;
     right: 0;
   }
 }
@@ -436,6 +436,9 @@
   // .filters-list{
   //   display: none;
   // }
+  .filter-switch {
+    top: -100%;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -443,8 +446,10 @@
     display: flex;
     -webkit-box-pack: center;
     align-items: center;
-    width: max-content;
-    margin-bottom: 30px;
+    width: 100%;
+    margin-bottom: 5px;
+    background: #FAFBFC;
+    padding: 10px 0;
     .show-filters_img-wrapper{
       width: 34px;
       height: 34px;
@@ -504,6 +509,7 @@
   .filters-list{
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
     .mob-filter-values{
       width: 100%;
       border: 1px solid #F4F7FC;
@@ -514,7 +520,6 @@
     display: flex;
     flex-direction: column;
   }
-
   .mobile-filters-block_wrapper{
     display: block;
   }
