--- a/src/app/catalog-page/catalog/catalog.component.scss
+++ b/src/app/catalog-page/catalog/catalog.component.scss
@@ -147,6 +147,15 @@
     width: 100%;
     padding: 0 15px;
   }
+  .bread-crumbs{
+    display: none;
+  }
+  .section-title{
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
 }
 
 // @media (max-width: 360px) {   Small mobile
